1998-05-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* Makefile.am (ice9_sources): Add emacs.scm.

1998-05-13  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.scm: Use the new readline facilities: Add the
	possibility to control input and output ports; Add apropos
	completion.

	* boot-9.scm: Antirevert Jim's readline code which he reverted
	19971027 and adapt it to the current readline interface.
	
	* boot-9.scm (top-repl): Only enable readline if not using the
	Emacs interface; Only use repl prompt when using the readline port
	from repl-read.  (We don't want to see it when calling `read'.)

	* boot-9.scm (remove-hook!): Parenthesis bug.

1998-05-11  Mikael Djurfeldt  <mdj@kenneth>

	* boot-9.scm: Load readline module if readline is present.

	* readline.scm (apropos-completion-function): New procedure:
	Symbolic completion.  (Thanks to Andrew Archibald!)

1998-04-22  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (process-define-module): Added keyword use-syntax.

1998-04-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* nonblocking.scm: Removed.  libguile is now inherently
	nonblocking through the use of scm_internal_select.
	
	* emacs.scm: Removed use of nonblocking.scm.

	* gwish.scm, gtcl.scm: Removed.  tcltk.scm has made these
	obsolete.
	
1998-04-15  Mikael Djurfeldt  <mdj@nada.kth.se>

	* runq.scm (runq-control): Corrected spelling of enqueue!.
	(Thanks to Karl M. Hegbloom.)

1998-03-30  Mikael Djurfeldt  <mdj@nada.kth.se>

	* boot-9.scm: Added new run-time option interface eval-options.

1998-03-28  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (remove-hook!): New macro.  (Thanks to Maciej
	Stachowiak.)

1998-01-30  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* threads.scm: Added simple error and signal handler.
	(make-thread, begin-handler): Use this handler.  The most
	important effect of this is that signals get unmasked.
	Previously, when a signal was thrown signals remained masked